# Dead-Code-Elimination

./: CMakeLists.txt  Makefile  README.md  build.sh  runDCE.sh
include/: DeadCodeElimination.h
lib/: ClientRA.cpp  DeadCodeElimination.cpp  RangeAnalysis.cpp  vSSA.cpp
tests/: after.b.dot  after.bar.dot  after.d.dot  after.foo.dot  after.m.dot  before.b.dot  before.bar.dot  before.d.dot  before.foo.dot  before.m.dot  test_2.c  test_3.c  test_4.c  test_5.c
